apps/carbide-registry/api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
name: carbide-images-api
metadata:
  name: carbide-images-api
  labels:
    app.kubernetes.io/name: carbide-images-api
    app.kubernetes.io/instance: carbide-images-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: carbide-images-api
      app.kubernetes.io/instance: carbide-images-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: carbide-images-api
        app.kubernetes.io/instance: carbide-images-api
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 2000
        runAsGroup: 2000
        runAsUser: 1001
      containers:
        - name: carbide-images-api
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          image: "clanktron/carbide-images-api:52bea16d66aa04fe6d02c539dcc0c65805e62909"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: http
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: http
          resources:
            {}
