apps/carbide-registry/api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: carbide-registry-api
  labels:
    app.kubernetes.io/name: carbide-registry-api
    app.kubernetes.io/instance: carbide-registry-api
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: carbide-registry-api
    app.kubernetes.io/instance: carbide-registry-api
